--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --outDir=docs",
+    "build": "vite build --outDir=docs --base=PixiMemoryLeak",
     "preview": "vite preview"
   },
   "devDependencies": {
